--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -18,7 +18,7 @@ jurisdiction: urn:iso:std:iso:3166#FR "France" # https://www.hl7.org/fhir/values
 publisher:
   name: ANS - Agence du Numérique en Santé
   url: http://esante.gouv.fr
-  # email: test@example.org
+  email: ci-sis@esante.gouv.fr
 
 # The dependencies property corresponds to IG.dependsOn. The key is the
 # package id and the value is the version (or dev/current). For advanced
